@@ -1,12 +1,24 @@
+#define PQXX_HAVE_LO_TELL 1
+/* #undef PQXX_HAVE_PQCANCEL */
+#define PQXX_HAVE_PQCLIENTENCODING 1
+/* #undef PQXX_HAVE_PQDESCRIBEPORTAL */
+/* #undef PQXX_HAVE_PQENCRYPTPASSWORD */
 #define PQXX_HAVE_PQESCAPEBYTEA 1
+#define PQXX_HAVE_PQESCAPEBYTEACONN 1
 #define PQXX_HAVE_PQESCAPESTRING 1
+#define PQXX_HAVE_PQESCAPESTRINGCONN 1
+#define PQXX_HAVE_PQEXECPARAMS 1
 #define PQXX_HAVE_PQEXECPREPARED 1
 #define PQXX_HAVE_PQFREEMEM 1
 #define PQXX_HAVE_PQFREENOTIFY 1
+#define PQXX_HAVE_PQFTABLE 1
+#define PQXX_HAVE_PQFTABLECOL 1
+/* #undef PQXX_HAVE_PQISTHREADSAFE */
+#define PQXX_HAVE_PQMBLEN 1
+/* #undef PQXX_HAVE_PQPREPARE */
 #define PQXX_HAVE_PQPROTOCOLVERSION 1
 #define PQXX_HAVE_PQPUTCOPY 1
 #define PQXX_HAVE_PQRESULTERRORFIELD 1
-#define PQXX_HAVE_PQUNESCAPEBYTEA 1
-#define PQXX_HAVE_PQFTABLE 1
-#define PQXX_HAVE_PQFTABLECOL 1
+/* #undef PQXX_HAVE_PQSERVERVERSION */
 #define PQXX_HAVE_PQSETERRORVERBOSITY 1
+#define PQXX_HAVE_PQUNESCAPEBYTEA 1
